20130327 (1028 prefixes)
  added: agls,agrelon,aigp,aos,api,being,bf,bif,biotop,biro,cb,cgov,city,cold,coll,comm,coun,cpa,crsw,csp,ctorg,dbtont,dcite,dcndl,deo,dl,doco,dqm,dr,drm,ds,dso,ecos,edgar,elec,emp,ep,fcp,fowl,gadm,gastro,geod,geosp,gnm,graffle,graves,gso,infor,inno,iol,itsmo,lcy,lh,lingvo,lmm1,lmm2,lsc,mads,mds,meb,mil,mime,moac,mrel,msr,mvco,ntag,nyt,obsm,odapp,odpart,odv,oecc,ontopic,opl,opmo,oprovo,ordf,osadm,osgeom,osp,osr,osspr,ostop,part,passim,prvt,pso,ptop,pwo,quty,raul,rdafrbr,rdag1,rdag3,rdarel,semio,seq,situ,snarm,spt,swpo,tao,te,tis,trait,turismo,tvc,vocab,vrank,wlo,wsl,xmp,zoomaterms
  changed: acm,br,crm,disco,dita,food,idemo,lib,ps,s2s,sc,sec
20130208 (914 prefixes)
  added: adms,aersv,agg,apivc,arpfo,asn,atomrdf,b2bo,bd,bing,biopax,bne,bp,bte,cidoccrm,daisy,dce,dco,dcr,disco,dita,dnb,dsp,dssn,ekaw,ens,eseduc,fd,food,fos,gawd,genea,geocontext,gsp,gxa,health,hgnc,icaltzd,idemo,igeo,jjd,kdo,l4a,laposte,ldp,lex,lyou,marshall,md,nxp,oa,oarj,oax,osn,owltime,particip,person,photoshop,pingback,prefix,pronom,qa,qud,rad,rov,ssso,strdf,tisc,uco,viaf,visit,w3po,wn20,xmls
  changed: cv,geoes,media,metalex,nfo,prv,xro

20120917 (840 prefixes)
  added: category,ero,interval

20120905 (837 prefixes)
  added: flow,osmsemnet,wfprov

  new subclass RDF::NS::URIS to get URI objects

20120829 (834 prefixes)
  added: mpeg7,myprefix,ngeoi,okg

20120827 (830 prefixes)
  added:   acco,admssw,aers,arg,br,cao,cogs,dive,dpl,eprints,eumida,germplasm,
           intervals,lctr,lemon,library,life,marl,muni,ncbitaxon,no,npgd,npgg,
           npgx,open,pav,pkmn,pml,poder,pol,r4ta,rda,rdagr1,rssynd,sdgp,set,sgv,
           spif,tcga
  changed: acm,crm,prism,prv,s4ac

  new methods PREFIX,PREFIXES, and REVERSE

20120521 (791 prefixes)
  added:   d2r,efo,enhancer,fcm,fise,fl,fls,oboe,pccz,rdrel,rec54

20120426 (780 prefixes)
  added:   aerols,carfo,cerif,cheminf,cts2,example,func,geom,gldp,goef,hg,ipad,