@@ -43,7 +43,7 @@ rdfns - quickly get common URI namespaces
 
 =head1 VERSION
 
-version 20130327
+version 20130402
 
 =head1 AUTHOR
 
